# buzi

./: pyproject.toml
buzi/: __init__.py  helpers.py  postprocessing.py  signal.py
buzi/ripples/: __init__.py  algorithms.py  detector.py
examples/: eeg_bands.py
