[project]
name = "buzi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.0",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ripple-detection>=1.7",
]
examples = [
    "mne>=1.6",
]
